<resources>
    <string name="app_name">Kalkulator Odleglości</string>
    <string name="toastMessLackM">Podaj metry do przeliczenia</string>
    <string name="toastNumber">Wprowadź wielkość w metrach</string>
    <string name="toastLackSelectedUnit">Wybierz jednostkę do przeliczenia</string>
    <string name="distMM">"Odległość w milach morskich"</string>
    <string name="distML">"Odległość w milach lądowych"</string>
    <string name="distCa">"Odległość w milach calach"</string>
    <string name="distJa">"Odległość w milach jardach"</string>
    <string name="distSt">"Odległość w milach stopach"</string>
    <string name="cMM">"Wybrano: Mile morskie"</string>
    <string name="cML">"Wybrano: Mile lądową"</string>
    <string name="cCa">"Wybrano: Cale"</string>
    <string name="cJa">"Wybrano: Jardy"</string>
    <string name="cSt">"Wybrano: Stopy"</string>
    <string name="rbMilaM">Mila morska</string>
    <string name="rbMilaL">Mile lądowa</string>
    <string name="rbJard">Jard</string>
    <string name="rbStopa">Stopa</string>
    <string name="rbCal">Cal</string>
    <string name="btnOdl">Wyznacz odległość</string>
    <string name="textView3">Wybierz miarę:</string>
</resources>