<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <EditText
            android:id="@+id/etMetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView3" />

        <RadioGroup
            android:id="@+id/rGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbMilaM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbMilaM" />

            <RadioButton
                android:id="@+id/rbMilaL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbMilaL" />

            <RadioButton
                android:id="@+id/rbJard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbJard" />

            <RadioButton
                android:id="@+id/rbStopa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbStopa" />

            <RadioButton
                android:id="@+id/rbCal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbCal" />
        </RadioGroup>

        <Button
            android:id="@+id/btnOdl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOdl" />

        <TextView
            android:id="@+id/tvWynik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>